force-app/main/default/objects/Appointment_Slot_Item__c/Appointment_Slot_Item__c.object-meta.xml
<CustomObject>
    <label>Appointment Slot Item</label>
    <nameField>
        <displayFormat>ASIN-{00000}</displayFormat>
        <label>Appointment Slot Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Slot Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>