force-app/main/default/objects/Appointment_Slot_Item__c/fields/Appointment_Slot__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Slot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Slot</label>
    <referenceTo>Appointment_Slot__c</referenceTo>
    <relationshipLabel>Appointment Slot Items</relationshipLabel>
    <relationshipName>Appointment_Slot_Items</relationshipName>
    <type>Lookup</type>
</CustomField>