force-app/main/default/objects/Appointment_Slot_Item__c/fields/Appointment_Slot_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Slot_Date__c</fullName>
    <formula>Appointment_Slot__r.Appointment_Slot_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Slot Date</label>
    <type>Date</type>
</CustomField>