force-app/main/default/objects/Appointment_Slot_Item__c/fields/Booking_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Booking_Threshold__c</fullName>
    <label>Booking Threshold</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>