force-app/main/default/objects/Appointment_Slot_Item__c/fields/Service_Bay__c.field-meta.xml
<CustomField>
    <fullName>Service_Bay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Bay</label>
    <referenceTo>Service_Bay__c</referenceTo>
    <relationshipLabel>Appointment Slot Items</relationshipLabel>
    <relationshipName>Appointment_Slot_Items</relationshipName>
    <type>Lookup</type>
</CustomField>